# InventoryManager

./: CMakeLists.txt  main.cpp
lib/devlib/: buildconf.h  configuration.cpp  configuration.hpp  ftw.cpp  ftw.hpp  log.cpp  log.hpp  math.hpp  string.hpp
res/: index.html  information.txt  information_conflict-20150226-154907.txt  loggedin.txt  loggedin_content.txt  login.txt  main.js  qedit.js  qedit_stub.html  style.css
server/: automtx.hpp  backupd.cpp  backupd.hpp  crontab.cpp  crontab.hpp  inventory.cpp  inventory.hpp  inventory_back.hpp  ports.cpp  ports.hpp  webserver.cpp  webserver.hpp
