project(InventoryManager)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
file(GLOB_RECURSE DEVLIBH "lib/devlib/*.hpp")
file(GLOB_RECURSE DEVLIBC "lib/devlib/*.cpp")
file(GLOB_RECURSE SERVERH "server/*.hpp")
file(GLOB_RECURSE SERVERC "server/*.cpp")
add_definitions(-DDLIB_NO_GUI_SUPPORT)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_executable(${PROJECT_NAME} ${SRC_LIST} ${DEVLIBH} ${DEVLIBC} ${SERVERH} ${SERVERC} lib/dlib/all/source.cpp)
